tests/NormalTests/paczka1/small_fuzzy/81299723.err
Error in line 8: RHW S686 226,5
Error in line 12: RHW S254 33,6
Error in line 7: S254 S765 22,1
